<resources>
    <string name="app_name">Poke Installer</string>
    <string name="installing">Installing…</string>
    <string name="install">Install</string>
    <string name="parse_apk_failed">Cannot parse apk file :%s</string>
    <string name="install_in_background">Silently Install Under ROOT</string>
    <string name="parsing">Parsing …</string>
    <string name="install_failed">%s install failed</string>
    <string name="apk_installed">%s has been installed</string>
    <string name="start_install">Start install %s</string>
    <string name="install_finished_with_result_code">Installation finished with result code %d</string>
    <string name="info_apk_path">APK PATH : </string>
    <string name="info_app_name">APP NAME : </string>
    <string name="info_pkg_name">PKG NAME : </string>
    <string name="info_version">VERSION : </string>
    <string name="info_installed_version">CUR  VER : </string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="back">Back</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="install_silently">Silently</string>
    <string name="unable_to_install_apk">Unable to install apk</string>
    <string name="open_app">OPEN</string>
    <string name="title_display_settings">Display Settings Button</string>
    <string name="summary_display_settings">Display settings button on install screen(invisible but can be click)</string>
    <string name="summary_display_progress_bar">Display progress bar while installing</string>
    <string name="title_display_progress_bar">Display progress bar</string>
    <string name="title_ocd_settings">OCD Settings</string>
    <string name="title_color_settings">Color Settings</string>
    <string name="summary_progress_normal">Default background color of top</string>
    <string name="title_progress_normal">Default</string>
    <string name="summary_progress_installing">Background color while installing</string>
    <string name="title_progress_installing">Installing</string>
    <string name="summary_progress_failure">Background color after install failure</string>
    <string name="title_progress_failure">Failure</string>
    <string name="summary_progress_success">Background color of success</string>
    <string name="title_progress_success">Success</string>
    <string name="summary_status_bar_color">Color of status bar</string>
    <string name="title_status_bar_color">Status Bar</string>
    <string name="title_donate">Donate</string>
    <string name="summary_donate">Donation can makes this app do better</string>
    <string name="no_permissions">Did not grant read and write permissions, exit</string>
    <string name="summary_auto_delete">Automatically remove the installation package after successful installation</string>
    <string name="title_auto_delete">Auto Delete</string>
    <string name="apk_deleteed">%s has been delete</string>
    <string name="app_permissions">APP PERM :</string>
    <string name="title_show_perm">App Permissions</string>
    <string name="summary_show_perm">Display app permissions list</string>
    <string name="summary_perm_color">Text color of permission list</string>
    <string name="title_perm_color">Permission Text</string>
    <string name="title_margins">Margins</string>
    <string name="summary_margins">Margins of bottom buttons</string>
</resources>
