<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <ImageView
                android:id="@+id/ic_settings"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_settings" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_app_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/parsing"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:layout_marginBottom="-8dp"
        android:indeterminate="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/layout_app_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_shell_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_hover"
            android:padding="8dp"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/btn_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_hover"
            android:padding="8dp"
            android:text="@string/install"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/btn_silently"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_hover"
            android:padding="8dp"
            android:text="@string/install_silently"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>
